# klaxxify

./: .gitignore  Application.vala  README.md  Window.vala  app.css  com.github.zenitsudev.klaxxify.yml  meson.build
.flatpak-builder/checksums/: x86_64-com.github.zenitsudev.klaxxify.yml
data/: app.css  com.github.zenitsudev.klaxxify.desktop  klaxxify.gresource.xml  meson.build
src/: Window.vala
src/Widgets/: KlaxxImage.vala  KlaxxImageObject.vala  KlaxxItem.vala  KlaxxPage.vala  KlaxxSideBar.vala  SideBar.vala  TierItem.vala  TierPage.vala
